// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectionPicker should match snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#0084F8",
        "borderRadius": 4,
        "borderWidth": 1.5,
      },
      undefined,
    ]
  }
>
  <FlatList
    data={
      Array [
        Object {
          "title": "Title 1",
          "value": 0,
        },
        Object {
          "title": "Title 2",
          "value": 1,
        },
      ]
    }
    disableVirtualization={false}
    horizontal={true}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    showsHorizontalScrollIndicator={false}
    testID="ftlist"
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</View>
`;

exports[`SelectionPicker should match snapshot for carouselItem 1`] = `
<ForwardRef
  onPress={[Function]}
  style={
    Object {
      "flexDirection": "row",
    }
  }
  testID="to"
>
  <View
    key="item-undefined"
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "padding": 7,
        },
        Object {
          "backgroundColor": "#0084F8",
        },
        Object {
          "width": 20,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
        }
      }
      textType="semiBold"
      type="small"
    >
      Title 1
    </Text>
  </View>
  <Divider
    containerStyles={
      Object {
        "borderColor": "#C9D6DF",
        "borderWidth": 0.5,
        "height": 25,
        "marginTop": 6,
      }
    }
    key="divider-undefined"
  />
</ForwardRef>
`;

exports[`SelectionPicker should match snapshot for carouselItem without optional width 1`] = `
<ForwardRef
  onPress={[Function]}
  style={
    Object {
      "flexDirection": "row",
    }
  }
  testID="to"
>
  <View
    key="item-undefined"
    style={
      Array [
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "padding": 7,
        },
        Object {
          "backgroundColor": "#0084F8",
        },
        Object {
          "width": 357.5,
        },
      ]
    }
  >
    <Text
      style={
        Object {
          "color": "#FFFFFF",
        }
      }
      textType="semiBold"
      type="small"
    >
      Title 1
    </Text>
  </View>
  <Divider
    containerStyles={
      Object {
        "borderColor": "#C9D6DF",
        "borderWidth": 0.5,
        "height": 25,
        "marginTop": 6,
      }
    }
    key="divider-undefined"
  />
</ForwardRef>
`;

exports[`SelectionPicker should match snapshot for optional width 1`] = `
<View
  style={
    Array [
      Object {
        "borderColor": "#0084F8",
        "borderRadius": 4,
        "borderWidth": 1.5,
      },
      undefined,
    ]
  }
>
  <FlatList
    data={
      Array [
        Object {
          "title": "Title 1",
          "value": 0,
        },
        Object {
          "title": "Title 2",
          "value": 1,
        },
      ]
    }
    disableVirtualization={false}
    horizontal={true}
    initialNumToRender={10}
    keyExtractor={[Function]}
    maxToRenderPerBatch={10}
    numColumns={1}
    onEndReachedThreshold={2}
    removeClippedSubviews={false}
    renderItem={[Function]}
    scrollEventThrottle={50}
    showsHorizontalScrollIndicator={false}
    testID="ftlist"
    updateCellsBatchingPeriod={50}
    windowSize={21}
  />
</View>
`;
